[package]
name = "browse-menu"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.19.2"
dialoguer = "0.12.0"
directories = "6.0.0"
reqwest = { version = "0.13.4", features = ["blocking"] }
robotparser = "0.11.0"
rusqlite = { version = "0.40.1", features = ["bundled"]}
scraper = "0.27.0"
url = "2.5.8"
uuid = "1.23.4"
